--- a/D_Strauss_Project_2.ipynb
+++ b/D_Strauss_Project_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMdpvXM8P9TvG9YfszRpn9",
+      "authorship_tag": "ABX9TyM2tHVFGB0o175uTRKtH21I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,29 @@
       },
       "source": [
         "testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XagFYefIdq55",
+        "outputId": "40aa7f0c-66ef-4c8a-ea3f-1646123dd4e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('y')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "y\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
